[project]
name = "idf-mobilite-stop-monitoring"
version = "0.1.0"
description = "FastAPI-based IDF Mobilité Stop Monitoring is a powerful Python-based solution for retrieving and processing public transit arrival time data from the IDF Mobilité API"
authors = [
  {name = "Mohamed Ehouran", email = "mohamedehouran@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.4.3",
    "fastapi>=0.115.14",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "thefuzz>=0.22.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
